--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -3126,7 +3126,7 @@
                 </attribute>
                 <layout class="QVBoxLayout" name="verticalLayout_25">
                  <item>
-                  <widget class="QGraphicsView" name="data_graph_2">
+                  <widget class="QGraphicsView" name="data_graph_result">
                    <property name="cursor" stdset="0">
                     <cursorShape>CrossCursor</cursorShape>
                    </property>
